# ChangeLog for x11-misc/rednotebook
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.55 2012/01/28 15:00:37 phajdan.jr Exp $

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rednotebook-1.2.0.ebuild:
  x86 stable wrt bug #400533

  26 Jan 2012; Markos Chandras <hwoarang@gentoo.org> rednotebook-1.2.0.ebuild:
  Stable on amd64 wrt bug #400533

  15 Oct 2011; Markos Chandras <hwoarang@gentoo.org> -rednotebook-1.1.1.ebuild,
  -rednotebook-1.1.6.ebuild, -rednotebook-1.1.7.ebuild:
  remove old

  13 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rednotebook-1.1.8.ebuild:
  x86 stable wrt bug #386533

  12 Oct 2011; Tony Vroon <chainsaw@gentoo.org> rednotebook-1.1.8.ebuild:
  Marked stable on AMD64 based on arch testing by Tomáš "Mepho" Pružina &
  Ian "idella4" Delaney in bug #386533.

*rednotebook-1.2.0 (09 Oct 2011)

  09 Oct 2011; Markos Chandras <hwoarang@gentoo.org> +rednotebook-1.2.0.ebuild,
  +files/rednotebook-1.2.0-disable-spell.patch:
  Version bump. Webkit is not optional anymore

*rednotebook-1.1.8 (11 Aug 2011)

  11 Aug 2011; Markos Chandras <hwoarang@gentoo.org> +rednotebook-1.1.8.ebuild:
  Version bump

*rednotebook-1.1.7 (15 Jul 2011)

  15 Jul 2011; Markos Chandras <hwoarang@gentoo.org> +rednotebook-1.1.7.ebuild:
  Version bump

  17 May 2011; Markos Chandras <hwoarang@gentoo.org> -rednotebook-1.1.2.ebuild,
  -rednotebook-1.1.4.ebuild:
  remove old

*rednotebook-1.1.6 (12 May 2011)

  12 May 2011; Markos Chandras <hwoarang@gentoo.org> +rednotebook-1.1.6.ebuild:
  Version bump

  06 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  rednotebook-1.1.1.ebuild, rednotebook-1.1.2.ebuild, rednotebook-1.1.4.ebuild:
  Fix deprecation warnings.

*rednotebook-1.1.4 (27 Mar 2011)

  27 Mar 2011; Markos Chandras <hwoarang@gentoo.org> +rednotebook-1.1.4.ebuild,
  +files/rednotebook-1.1.4-disable-webkit.patch, metadata.xml: