@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/rednotebook
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.55 2012/01/28 15:00:37 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/rednotebook/ChangeLog,v 1.56 2012/02/02 23:09:11 hwoarang Exp $
+
+*rednotebook-1.3.0 (02 Feb 2012)
+
+  02 Feb 2012; Markos Chandras <hwoarang@gentoo.org> +rednotebook-1.3.0.ebuild:
+  version bump. use linguas_x to select desired translations
 
   28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   rednotebook-1.2.0.ebuild:
